manifests/config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workspaces
  labels:
    name: workspaces
    pod-security.kubernetes.io/enforce: baseline
